# shimpz-drivers

./: .gitignore
apps/: Dockerfile  app.py  caddy_routes.py  manifests.py  pyproject.toml  validate.py
capsule/: Dockerfile  Dockerfile.local  LOCAL_CONTROLLER.md  accounts_client.py  app.py  assistant_chat.py  audit.py  brain_credentials_client.py  brain_runtime_client.py  capsule_storage.py  chat_orchestrator.py  healthcheck.py  inference_config.py  local_app.py  local_healthcheck.py  local_registry.py  local_token_store.py  manifests.py  marketplace.py  marketplace_image.py  network_policy.py  pgdriver_client.py  power_journal.py  pyproject.toml  r2driver_client.py  token_store.py  validate.py
team/: .dockerignore  Dockerfile  Dockerfile.local  LOCAL_CONTROLLER.md  accounts_client.py  app.py  assistant_account_challenges.py  assistant_account_flow.py  assistant_approval_challenges.py  assistant_approval_flow.py  assistant_approval_grants.py  assistant_catalog.json  assistant_contract.py  assistant_genesis.py  assistant_help.py  assistant_manifest.py  assistant_secret_challenges.py  assistant_secret_flow.py  assistant_secret_store.py  brain_credentials_client.py  brain_runtime_client.py  chat_orchestrator.py  chat_turn_engine.py  cloudflare_assistant_contract.py  healthcheck.py  inference_config.py  local_app.py  local_chat_continuation_store.py  local_chat_continuations.py  local_healthcheck.py  local_registry.py  local_token_store.py  manifests.py  marketplace.py  oauth_account_service.py  oauth_account_store.py  oauth_broker_client.py  oauth_connection_service.py  (+11 more)
(+173 files in other folders)
